--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
   <p>
     <a class="mute" href="https://www.netlify.com/statuskit">
-      StatusKit by Netlify
+      StatusKit by Karl Aparece
     </a> &#8226
     <a class="mute" href="https://github.com/netlify/netlify-statuskit">
       View on GitHub
