--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <div class="footer">
   <p>
-    <a class="mute" href="https://www.netlify.com/statuskit">
+    <a class="mute" href="https://https://hackerone.com/c1231665">
       StatusKit by Karl Aparece
     </a> &#8226
-    <a class="mute" href="https://github.com/netlify/netlify-statuskit">
-      View on GitHub
+    <a class="mute" href="https://https://hackerone.com/c1231665">
+      View on Hackerone
     </a>
   </p>
 </div>
