--- a/site/layouts/partials/all-clear.html
+++ b/site/layouts/partials/all-clear.html
@@ -4,7 +4,7 @@
     {{ $latestDate := dateFormat "2006-01-02T15:04:05" .}}
     <p id="days-since-latest" data-latest-incident-date="{{ $latestDate }}">Last incident: {{ .Format "02 Jan 2006 15:04 MST" }}</p>
   {{ else }}
-    <p>This page is under development.</p>
+    <p>This page is under development by Karl Aparece</p>
   {{ end }}
 </div>
 
